# agentic-stock-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  context.md  debug_ddg.py  docker-compose.yml  inspect_langgraph.py  main.py  master_plan.md  pyproject.toml  rearchitecture_plan.md  requirements.txt  roadmap.md  verify_fallback.py  verify_fundamental.py  verify_ollama_config.py  verify_quant.py  verify_search.py  verify_supervisor.py  verify_tools.py  verify_valuation.py
api/: main.py  requirements.txt
api/static/: index.html
app/: agent.py  cache.py  database.py  filings.py  fundamentals.py  graph.py  llm.py  models.py  prompts.py  sec_tools.py  state.py  t212_import.py  tasks.py  tools.py
app/agents/: classifier.py  financial.py  fundamental.py  quant.py  sentiment.py  supervisor.py  technical.py  utils.py  valuation.py
docs/: ui_strategy_roadmap.md
scripts/: init_db.py  setup.sh
tests/: test_api.py  test_t212_import.py
web-ui-v2/: .dockerignore  index.html  package.json  vite.config.ts
web-ui-v2/src/: App.tsx  index.css
web-ui-v2/src/components/: FilingsPanel.tsx  FundamentalHighlights.css  FundamentalHighlights.tsx  NewsPanel.tsx  StrategyBuilder.tsx
web-ui-v2/src/components/chart/: StockChart.tsx
web-ui-v2/src/components/chat/: ChatPanel.tsx
web-ui-v2/src/components/layout/: Header.tsx  Sidebar.tsx
web-ui-v2/src/components/stats/: StatCard.tsx
web-ui-v2/src/hooks/: useBacktest.ts  useChat.ts  useFilings.ts  useIndicators.ts  useNews.ts  usePortfolio.ts  useStockData.ts
web-ui-v2/src/types/: api.ts
(+2 files in other folders)
